Changes for 0.8.5

* fix max select when more than one type of unit present (sgb)

* fix some click to continue to press sapce to continue (sgb)

Changes for 0.8.4

* change click to continue text to press space to continue on battle screens (sgb)

* add an option in battle calculator that at least 1 attacking land unit must survive (sgb)

* fix transport capactity in europe, add connection between adriatic and central med, make saudia arabia nuetral (sgb)

* change network to use nio (sgb)

* fix bug where units originally in a sea zone with a submerged sub that is attacked by another unit cant leave the sea zone (sgb)

* show battle calculator on current territory when pressing ctrl B (sgb)

* ctrl+ and ctrl - zoom in and out (sgb)

* mark lhtr as complete. low luck rules for heavy bombers still need to be added for all versions (sgb)

* allow fighters to hover in sea zone where carriers can be produced under them for lhtr (sgb)

* move dice server config into properties file (sgb)

* allow controlling of name placements using name_place.txt (sgb)

* fix sea zone boundaries when map is scaled (sgb)

* add great_war mode (surtur2 and Triplelk)

* update triplea_linux.sh (Daniel Roethlisberger)

* show messages when people join/leave chat (sgb)

* fix scroll bug where map would jump when mouse scrolled in non wrappable maps (sgb)

* make convoy zones more transparent (sgb)

* fix neutral fighting bug (sgb)

* fix spelling mstakes in classic map (sgb, RogerCooper)

* add max button to place dialog where number of units that can be placed is limited (sgb)

* fix bug [ 1563239 ] Bad scroll increment for scrollbars (sgb)

* fix bug  [ 1563227 ] Continue button does not show up (sgb)

Changes for 0.8.3

* make odds calculator use MustFightBattle, update ui (sgb)

* allow scaling of auto placement finder.  On the command line, type the scale after the command, 
eg "java -classpath triplea.jar util/image/AutoPlacementFinder 0.5" (sgb)
